--- a/contact_us.html
+++ b/contact_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>yogetyw</title>
+		<title>Pluss</title>
 		<link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
 		<link href="css/pluss.css" rel="stylesheet" type="text/css" />
 		<meta charset="utf-8">
